# QuickMenuPlus

./: CHANGELOG.md  CMakeLists.txt  README.md  ScePaf.yml  common.h  config.c  config.h  main.c  opcode.c  opcode.h  quickmenuplus.c  quickmenuplus.yml  quickpower.c  quickpower.yml  scepaf.h
doc/: development_notes.md
libpaf/: CMakeLists.txt  ScePafWidget.yml
libshellsvc/: CMakeLists.txt  SceShellUtil.yml
quickvolume/: CHANGELOG.md  CMakeLists.txt  exports.yml  main.c
rapidmenu/: CMakeLists.txt  README.md  exports.yml  main.c
